Finished structure of html

--- a/index.html
+++ b/index.html
@@ -1,70 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Try It Free
-
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Get Started For Free
-
-  Grow Together
-
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <title>
+      Frontend Mentor | Huddle landing page with alternating feature blocks
+    </title>
+  </head>
+  <body>
+    <header>
+      <h1 class="sr-only">Huddle Landing Page</h1>
+      <div class="tittle__logo">
+        <img class="logo" src="./images/logo.svg" alt="" />
+      </div>
+      <button class="tittle__button">Try It Free</button>
+    </header>
+    <!--  -->
+    <div class="page-container">
+      <main class="content">
+        <div class="content__tittle">
+          <div class="content__box">
+            <h2 class="content__tittle-h2">
+              Build The Community Your Fans Will Love
+            </h2>
+            <p class="content__tittle-paragraph">
+              Huddle re-imagines the way we build communities. You have a voice,
+              but so does your audience. Create connections with your users as
+              you engage in genuine discussion.
+            </p>
+            <button class="content__tittle-btn">Get Started For Free</button>
+          </div>
+          <div class="content__box">
+            <img
+              src="./images/illustration-mockups.svg"
+              alt=""
+              class="content__tittle-pic"
+            />
+          </div>
+        </div>
+        <div class="content__info">
+          <div class="content__info-card">
+            <img
+              src="./images/illustration-grow-together.svg"
+              alt=""
+              class="card-pic"
+            />
+            <h3 class="card-tittle">Grow Together</h3>
+            <p class="card-info">
+              Generate meaningful discussions with your audience and build a
+              strong, loyal community. Think of the insightful conversations you
+              miss out on with a feedback form.
+            </p>
+          </div>
+          <div class="content__info-card">
+            <img
+              src="./images/illustration-flowing-conversation.svg"
+              alt=""
+              class="card-pic"
+            />
+            <h3 class="card-tittle">Flowing Conversations</h3>
+            <p class="card-info">
+              You wouldn't paginate a conversation in real life, so why do it
+              online? Our threads have just-in-time loading for a more natural
+              flow.
+            </p>
+          </div>
+          <div class="content__info-card">
+            <img
+              src="./images/illustration-your-users.svg"
+              alt=""
+              class="card-pic"
+            />
+            <h3 class="card-tittle">Your Users</h3>
+            <p class="card-info">
+              It takes no time at all to integrate Huddle with your app's
+              authentication solution. This means, once signed in to your app,
+              your users can start chatting immediately.
+            </p>
+          </div>
+          <div class="content__info-card">
+            <h3 class="card-tittle">Ready To Build Your Community?</h3>
+            <button class="card-btn">Get Started For Free</button>
+          </div>
+        </div>
+      </main>
+    </div>
+    <!--  -->
+    <footer>
+      <div class="foot__main">
+        <div class="foot__main-logo">
+          <img class="foot-logo" src="./images/logo.svg" alt="" />
+        </div>
+        <div class="foot__main-info">
+          <div class="foot__main-info-location">
+            <img src="./images/icon-location.svg" alt="" class="location-pic" />
+            <p class="location-info info">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua
+            </p>
+          </div>
+          <div class="foot__main-info-phone">
+            <img src="./images/icon-phone.svg" alt="" class="phone-pic" />
+            <p class="phone-info info">+1-543-123-4567</p>
+          </div>
+          <div class="foot__main-info-email">
+            <img src="./images/icon-email.svg" alt="" class="email-pic" />
+            <p class="email-info info">example@huddle.com</p>
+          </div>
+        </div>
+        <div class="foot__contact-links">
+          <a class="link">About Us</a>
+          <a class="link"> What We Do</a>
+          <a class="link"> FAQ</a>
+          <a class="link"> Career</a>
+          <a class="link"> Blog</a>
+          <a class="link"> Contact Us</a>
+        </div>
+        <div class="social">
+          <a class="social__btn">
+            <img
+              class="social__btn-icon facebook"
+              src="./images/icons/facebook.svg"
+              alt=""
+          /></a>
+          <a class="social__btn">
+            <img
+              class="social__btn-icon twitter"
+              src="./images/icons/twitter-brands.svg"
+              alt=""
+          /></a>
+          <a class="social__btn">
+            <img
+              class="social__btn-icon instagram"
+              src="./images/icons/instagram-brands.svg"
+              alt=""
+          /></a>
+        </div>
+        <div class="copyright-box">
+          &copy; Copyright 2018 Huddle. All rights reserved.
+        </div>
+      </div>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </p>
+    </footer>
+  </body>
 </html>
