Mobile first css desing

--- a/index.html
+++ b/index.html
@@ -26,40 +26,42 @@
   <body>
     <header>
       <h1 class="sr-only">Huddle Landing Page</h1>
-      <div class="tittle__logo">
-        <img class="logo" src="./images/logo.svg" alt="" />
+      <div class="top-bar">
+        <div class="box__logo">
+          <img class="logo" src="./images/logo.svg" alt="" />
+        </div>
+        <button class="logo__btn">Try It Free</button>
       </div>
-      <button class="tittle__button">Try It Free</button>
+      <div class="header__tittle">
+        <div class="header__box">
+          <h2 class="header__tittle-h2">
+            Build The Community Your Fans Will Love
+          </h2>
+          <p class="header__tittle-paragraph">
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
+          <button class="header__tittle-btn">Get Started For Free</button>
+        </div>
+        <div class="header__box">
+          <img
+            src="./images/illustration-mockups.svg"
+            alt=""
+            class="header__tittle-pic pic"
+          />
+        </div>
+      </div>
     </header>
     <!--  -->
     <div class="page-container">
       <main class="content">
-        <div class="content__tittle">
-          <div class="content__box">
-            <h2 class="content__tittle-h2">
-              Build The Community Your Fans Will Love
-            </h2>
-            <p class="content__tittle-paragraph">
-              Huddle re-imagines the way we build communities. You have a voice,
-              but so does your audience. Create connections with your users as
-              you engage in genuine discussion.
-            </p>
-            <button class="content__tittle-btn">Get Started For Free</button>
-          </div>
-          <div class="content__box">
-            <img
-              src="./images/illustration-mockups.svg"
-              alt=""
-              class="content__tittle-pic"
-            />
-          </div>
-        </div>
         <div class="content__info">
           <div class="content__info-card">
             <img
               src="./images/illustration-grow-together.svg"
               alt=""
-              class="card-pic"
+              class="card-pic pic"
             />
             <h3 class="card-tittle">Grow Together</h3>
             <p class="card-info">
@@ -72,7 +74,7 @@
             <img
               src="./images/illustration-flowing-conversation.svg"
               alt=""
-              class="card-pic"
+              class="card-pic pic"
             />
             <h3 class="card-tittle">Flowing Conversations</h3>
             <p class="card-info">
@@ -85,7 +87,7 @@
             <img
               src="./images/illustration-your-users.svg"
               alt=""
-              class="card-pic"
+              class="card-pic pic"
             />
             <h3 class="card-tittle">Your Users</h3>
             <p class="card-info">
@@ -94,7 +96,7 @@
               your users can start chatting immediately.
             </p>
           </div>
-          <div class="content__info-card">
+          <div class="content__info-card register-btn">
             <h3 class="card-tittle">Ready To Build Your Community?</h3>
             <button class="card-btn">Get Started For Free</button>
           </div>
