Start the design of tablet layout

--- a/index.html
+++ b/index.html
@@ -110,19 +110,23 @@
           <img class="foot-logo" src="./images/logo.svg" alt="" />
         </div>
         <div class="foot__main-info">
-          <div class="foot__main-info-location">
-            <img src="./images/icon-location.svg" alt="" class="location-pic" />
+          <div class="main-info location">
+            <img
+              src="./images/icon-location.svg"
+              alt=""
+              class="location-pic icon"
+            />
             <p class="location-info info">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua
             </p>
           </div>
-          <div class="foot__main-info-phone">
-            <img src="./images/icon-phone.svg" alt="" class="phone-pic" />
+          <div class="main-info phone">
+            <img src="./images/icon-phone.svg" alt="" class="phone-pic icon" />
             <p class="phone-info info">+1-543-123-4567</p>
           </div>
-          <div class="foot__main-info-email">
-            <img src="./images/icon-email.svg" alt="" class="email-pic" />
+          <div class="main-info email">
+            <img src="./images/icon-email.svg" alt="" class="email-pic icon" />
             <p class="email-info info">example@huddle.com</p>
           </div>
         </div>
@@ -160,9 +164,12 @@
       </div>
       <p class="attribution">
         Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        <a
+          href="https://www.frontendmentor.io/challenges/huddle-landing-page-with-alternating-feature-blocks-5ca5f5981e82137ec91a5100/hub/huddle-landing-page-with-alternating-feature-blocks-HFSvqREFa"
+          target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="https://github.com/JohnnatanV">Johnnatan Villaneda</a>.
       </p>
     </footer>
   </body>
