Completing tablet layout

--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
               alt=""
               class="card-pic pic"
             />
-            <h3 class="card-tittle">Grow Together</h3>
-            <p class="card-info">
-              Generate meaningful discussions with your audience and build a
-              strong, loyal community. Think of the insightful conversations you
-              miss out on with a feedback form.
-            </p>
+            <div class="card-info">
+              <h3 class="card-tittle">Grow Together</h3>
+              <p class="card-content">
+                Generate meaningful discussions with your audience and build a
+                strong, loyal community. Think of the insightful conversations
+                you miss out on with a feedback form.
+              </p>
+            </div>
           </div>
           <div class="content__info-card">
             <img
@@ -76,12 +78,14 @@
               alt=""
               class="card-pic pic"
             />
-            <h3 class="card-tittle">Flowing Conversations</h3>
-            <p class="card-info">
-              You wouldn't paginate a conversation in real life, so why do it
-              online? Our threads have just-in-time loading for a more natural
-              flow.
-            </p>
+            <div class="card-info">
+              <h3 class="card-tittle">Flowing Conversations</h3>
+              <p class="card-content">
+                You wouldn't paginate a conversation in real life, so why do it
+                online? Our threads have just-in-time loading for a more natural
+                flow.
+              </p>
+            </div>
           </div>
           <div class="content__info-card">
             <img
@@ -89,12 +93,14 @@
               alt=""
               class="card-pic pic"
             />
-            <h3 class="card-tittle">Your Users</h3>
-            <p class="card-info">
-              It takes no time at all to integrate Huddle with your app's
-              authentication solution. This means, once signed in to your app,
-              your users can start chatting immediately.
-            </p>
+            <div class="card-info">
+              <h3 class="card-tittle">Your Users</h3>
+              <p class="card-content">
+                It takes no time at all to integrate Huddle with your app's
+                authentication solution. This means, once signed in to your app,
+                your users can start chatting immediately.
+              </p>
+            </div>
           </div>
           <div class="content__info-card register-btn">
             <h3 class="card-tittle">Ready To Build Your Community?</h3>
