--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="/your-path-to-fontawesome/css/fontawesome.css"
+      rel="stylesheet"
+    />
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet" />
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
 
     <title>
@@ -145,19 +151,21 @@
           <a class="link"> Contact Us</a>
         </div>
         <div class="social">
-          <a class="social__btn">
-            <img
+          <a class="social__btn facebook">
+            <!-- <img
               class="social__btn-icon facebook"
               src="./images/icons/facebook.svg"
               alt=""
-          /></a>
-          <a class="social__btn">
+          /> -->
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a class="social__btn twitter">
             <img
               class="social__btn-icon twitter"
               src="./images/icons/twitter-brands.svg"
               alt=""
           /></a>
-          <a class="social__btn">
+          <a class="social__btn instagram">
             <img
               class="social__btn-icon instagram"
               src="./images/icons/instagram-brands.svg"
