Finished project and completing Readme file

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="/your-path-to-fontawesome/css/fontawesome.css"
-      rel="stylesheet"
-    />
-    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet" />
-    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/f8c00bd5ae.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
 
     <title>
@@ -151,26 +149,30 @@
           <a class="link"> Contact Us</a>
         </div>
         <div class="social">
-          <a class="social__btn facebook">
+          <a class="social__btn">
             <!-- <img
               class="social__btn-icon facebook"
               src="./images/icons/facebook.svg"
               alt=""
           /> -->
-            <i class="fab fa-facebook-f"></i>
+            <i class="social__btn-icon fab fa-facebook-f"></i>
           </a>
-          <a class="social__btn twitter">
-            <img
+          <a class="social__btn">
+            <!-- <img
               class="social__btn-icon twitter"
               src="./images/icons/twitter-brands.svg"
               alt=""
-          /></a>
-          <a class="social__btn instagram">
-            <img
+          /> -->
+            <i class="social__btn-icon fab fa-twitter"></i>
+          </a>
+          <a class="social__btn">
+            <!-- <img
               class="social__btn-icon instagram"
               src="./images/icons/instagram-brands.svg"
               alt=""
-          /></a>
+          /> -->
+            <i class="social__btn-icon fab fa-instagram"></i>
+          </a>
         </div>
         <div class="copyright-box">
           &copy; Copyright 2018 Huddle. All rights reserved.
